developerProject/force-app/main/default/objects/OJSERLIB__Application__c/OJSERLIB__Application__c.object-meta.xml
<CustomObject>
    <label>Application</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>