developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__AccountAPP__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__AccountAPP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>