developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Amount__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>OJSERLIB__Application_Line_Item__c.OJSERLIB__Total_Price__c</summarizedField>
    <summaryForeignKey>OJSERLIB__Application_Line_Item__c.OJSERLIB__Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>