developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__API__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__API__c</fullName>
    <formula>$Api.Partner_Server_URL_290</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>API</label>
    <type>Text</type>
</CustomField>