developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Application_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Application_Number__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Application Number</label>
    <type>AutoNumber</type>
</CustomField>