developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Asset_type__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Asset_type__c</fullName>
    <label>Asset type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>IT/Telecoms</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>General Plant and Equipment</fullName>
            </value>
            <value>
                <fullName>Vehicles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>