developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Background_Information__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Background_Information__c</fullName>
    <label>Background Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>