developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Commencement_Date_First__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Commencement_Date_First__c</fullName>
    <label>Commencement Date First</label>
    <type>Date</type>
</CustomField>