developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Comments__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>