developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Company_Name__c</fullName>
    <label>Company Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>