developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Condition255_Length_In_Business__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Condition255_Length_In_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Length In Business</label>
    <type>Checkbox</type>
</CustomField>