developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Condition255_Personal_Guarantors__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Condition255_Personal_Guarantors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Guarantors</label>
    <type>Checkbox</type>
</CustomField>