developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Condition255_Term_Limit_months__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Condition255_Term_Limit_months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Term Limit (months)</label>
    <type>Checkbox</type>
</CustomField>