developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__ConditionBOQF_Clear_VEDA__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ConditionBOQF_Clear_VEDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear VEDA</label>
    <type>Checkbox</type>
</CustomField>