developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__ConditionBOQF_Directors_Guarantees__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ConditionBOQF_Directors_Guarantees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directors Guarantees</label>
    <type>Checkbox</type>
</CustomField>