developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__ConditionBOQF_Financial_Statement__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ConditionBOQF_Financial_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Statement</label>
    <type>Checkbox</type>
</CustomField>