developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__ConditionBOQF_Home_Owner_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ConditionBOQF_Home_Owner_Guarantor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ConditionBOQF Home Owner Guarantor</label>
    <type>Checkbox</type>
</CustomField>