developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__ConditionBOQF_Minimum_Yrs_Trading__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ConditionBOQF_Minimum_Yrs_Trading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minimum Yrs Trading</label>
    <type>Checkbox</type>
</CustomField>