developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__ConditionBOQF_TL_Credit_Matrix__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__ConditionBOQF_TL_Credit_Matrix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TL Credit Matrix</label>
    <type>Checkbox</type>
</CustomField>