developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Contract_Amount__c</fullName>
    <label>Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>