developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Documentation_Fees__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Documentation_Fees__c</fullName>
    <label>Documentation Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>