developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__External_System_ID__c</fullName>
    <label>External System ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>