developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Frequency__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>