developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Is255_Finance__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is255_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>255 Finance</label>
    <type>Checkbox</type>
</CustomField>