developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Is_Deal_GreaterThan_75k__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is_Deal_GreaterThan_75k__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deal &gt;75k ?</label>
    <type>Checkbox</type>
</CustomField>