developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Is_Deal_Lessthan_75K__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is_Deal_Lessthan_75K__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deal &lt;75K ?</label>
    <type>Checkbox</type>
</CustomField>