developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Is_Home_Ownership_Verified__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is_Home_Ownership_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Home Ownership Verified</label>
    <type>Checkbox</type>
</CustomField>