developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Is_LessThan5_Yrs_Trading__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is_LessThan5_Yrs_Trading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is &lt;5 Yrs Trading</label>
    <type>Checkbox</type>
</CustomField>