developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Is_Marketing_Accepted__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is_Marketing_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Marketing Accepted</label>
    <type>Checkbox</type>
</CustomField>