developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Is_Premises_Owned__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is_Premises_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Premises Owned(For Solar)</label>
    <type>Checkbox</type>
</CustomField>