developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Is_Supplier_Accredited__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is_Supplier_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Supplier Accredited</label>
    <type>Checkbox</type>
</CustomField>