developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Is_TL_Credit_Matrix_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Is_TL_Credit_Matrix_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is TL Credit Matrix Satisfied</label>
    <type>Checkbox</type>
</CustomField>