developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__IsClear_VEDA_For_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsClear_VEDA_For_Guarantor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Clear VEDA For Guarantor(s)</label>
    <type>Checkbox</type>
</CustomField>