developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__IsEquipment_New_And_Eligible__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsEquipment_New_And_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Equipment New And Eligible</label>
    <type>Checkbox</type>
</CustomField>