developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__IsMinimum_2_Yrs_Trading__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsMinimum_2_Yrs_Trading__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Minimum 2 Yrs Trading</label>
    <type>Checkbox</type>
</CustomField>