developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__IsOther_Finance__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsOther_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Finance</label>
    <type>Checkbox</type>
</CustomField>