developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__IsTermSatisfied__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsTermSatisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Term (months) Satisfied</label>
    <type>Checkbox</type>
</CustomField>