developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__IsTL_Finance__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsTL_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TL Approved</label>
    <type>Checkbox</type>
</CustomField>