developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__IsVEDA_Info_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__IsVEDA_Info_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsVEDA Info Satisfied</label>
    <type>Checkbox</type>
</CustomField>