developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Loan_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Loan_Repayment_Amount__c</fullName>
    <label>Loan Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>