developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Nature_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Nature_Of_Business__c</fullName>
    <label>Nature Of Business</label>
    <length>225</length>
    <type>Text</type>
</CustomField>