developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Pending_Information_Details__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Pending_Information_Details__c</fullName>
    <label>Pending Information Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>