developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Quote_Number__c</fullName>
    <displayFormat>Q-{0000}</displayFormat>
    <label>Quote Number</label>
    <type>AutoNumber</type>
</CustomField>