developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Shared_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Shared_Interest_Rate__c</fullName>
    <label>Shared Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>