developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__SignedAgreementUploaded__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__SignedAgreementUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SignedAgreementUploaded</label>
    <type>Checkbox</type>
</CustomField>