developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Status__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Under Assessment</fullName>
            </value>
            <value>
                <fullName>Approved - pending further info</fullName>
            </value>
            <value>
                <fullName>Approved - waiting on Invoice</fullName>
            </value>
            <value>
                <fullName>In for Settlement</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>