developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Summary_Of_Assets__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Summary_Of_Assets__c</fullName>
    <label>Summary Of Assets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>