developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Term_in_Months__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Term_in_Months__c</fullName>
    <label>Term in Months</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>