developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Total_Amount__c</fullName>
    <formula>OJSERLIB__Loan_Repayment_Amount__c + OJSERLIB__GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>