developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__VEDA_Clear_Director_Residence_Overseas__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Clear_Director_Residence_Overseas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Director Residence Overseas</label>
    <type>Checkbox</type>
</CustomField>