developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__VEDA_Clear_Director_Verified__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Clear_Director_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Director(s) Detail Verified</label>
    <type>Checkbox</type>
</CustomField>