developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__VEDA_Clear_Incorporation_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Clear_Incorporation_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Incorporation Date Exists</label>
    <type>Checkbox</type>
</CustomField>