developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__VEDA_Clear_Is_Previous_Directors_Exists__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Clear_Is_Previous_Directors_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Previous Directors Exists</label>
    <type>Checkbox</type>
</CustomField>