developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__VEDA_Clear_Is_Status_Register__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Clear_Is_Status_Register__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Status Register</label>
    <type>Checkbox</type>
</CustomField>