developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__VEDA_Data_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDA_Data_Retrieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VEDA Data Retrieved</label>
    <type>Checkbox</type>
</CustomField>