developerProject/force-app/main/default/objects/OJSERLIB__Application__c/fields/OJSERLIB__Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Years_in_Business__c</fullName>
    <label>Years in Business</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>