developerProject/force-app/main/default/objects/OJSERLIB__Application__c/listViews/OJSERLIB__All.listView-meta.xml
<ListView>
    <fullName>OJSERLIB__All</fullName>
    <columns>OJSERLIB__Application_Number__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OJSERLIB__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>