developerProject/force-app/main/default/objects/OJSERLIB__Application__c/listViews/OJSERLIB__All1.listView-meta.xml
<ListView>
    <fullName>OJSERLIB__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>